--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,7 +21,7 @@ footer {
     height: 40px;
     padding: 5px 0px;
     clear: both;
-    background: #d7e0e9;
+    background: #F8E0E6;
     text-align: center;
     color: black;
 }
